--- a/styles/style.css
+++ b/styles/style.css
@@ -23,7 +23,7 @@ body {
 }
 
 .container {
-  min-width: 900px;
+  min-width: 1000px;
   margin: 0 auto;
 }
 
@@ -126,12 +126,15 @@ body {
   background-color: transparent;
   border: none;
   position: relative;
+  display: flex;
+  justify-content: center;
   flex-wrap: wrap;
   min-height: 40px;
-  font-size: 1.4rem;
+  font-size: 1.2rem;
   color: #21033d;
   cursor: pointer;
   z-index: 1;
+  padding: 12px 50px;
 }
 
 .content-answers .btn-answers::before {
@@ -219,10 +222,36 @@ body {
 }
 
 /* responsive design */
+@media screen and (max-width: 900px) {
+  #start-screen .data .title {
+    font-size: 3.5rem;
+  }
+
+  .container-questionsAnswer h2 {
+    font-size: 2.2rem;
+  }
+
+  .container-questionsAnswer .questions {
+    font-size: 1.75rem;
+    width: 670px;
+  }
+
+  .content-answers {
+    grid-template-columns: auto;
+  }
+
+  .content-answers .btn-answers {
+    font-size: 1.75rem;
+  }
+}
+
 @media screen and (max-width: 600px) {
   #start-screen .data .title {
-    font-size: 2.4rem;
-    text-align: center;
+    font-size: 2rem;
+  }
+
+  #start-screen .data .des {
+    font-size: 1.3rem;
   }
 
   .container-questionsAnswer h2 {
@@ -230,32 +259,14 @@ body {
   }
 
   .container-questionsAnswer .questions {
-    font-size: 1.5rem;
-    width: 400px;
-  }
-
-  .container-questionsAnswer .questions::before {
-    content: "";
-    position: absolute;
-    top: 0;
-    left: 0;
-    width: 100%;
-    height: 100%;
-    background-color: #fff;
-    z-index: -1;
-    transform: skew(15deg);
+    font-size: 1.1rem;
+    width: max-content;
   }
 
   .container-questionsAnswer .questions::after {
-    left: -30px;
-    font-size: 10rem;
-  }
-
-  .content-answers {
-    grid-template-columns: auto;
-  }
-
-  .resultQuestions h2 {
-    font-size: 2rem;
+    top: -50%;
+    left: -10px;
+    font-size: 8rem;
+    transform: translateY(-10%);
   }
 }
